examples/test/testpolicy11104.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11104
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key33: value42
      key16: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value23
          key39: value45
          key31: value19
      podSelector:
        matchLabels:
          key45: value22
          key31: value11
          key34: value25
